--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   "dependencies": {
     "axios": "^0.16.2",
     "js-cookie": "^2.2.0",
-    "mathjs": "^4.3.0",
+    "moment": "^2.22.1",
     "npm": "^5.10.0",
     "vue": "^2.5.16",
     "vue-axios": "^2.1.1",
     "vue-i18n": "^7.6.0",
     "vue-router": "^2.7.0",
-    "moment": "^2.22.1"
+    "zero-fill": "^2.2.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.2.6",
